force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/HDT_CalcoloPreventivi__mdt.object-meta.xml
<CustomObject>
    <label>Calcolo Preventivo</label>
    <pluralLabel>Calcolo Preventivi</pluralLabel>
</CustomObject>