force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/fields/ConnectionType__c.field-meta.xml
<CustomField>
    <fullName>ConnectionType__c</fullName>
    <label>Tipo Connessione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporanea</fullName>
                <default>true</default>
                <label>Temporanea</label>
            </value>
            <value>
                <fullName>Permanente</fullName>
            </value>
            <value>
                <fullName>Temporanea permanente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>