force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/fields/DistributorFixedQuote__c.field-meta.xml
<CustomField>
    <fullName>DistributorFixedQuote__c</fullName>
    <label>Quota Distributore</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>