force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/fields/OperationCode__c.field-meta.xml
<CustomField>
    <fullName>OperationCode__c</fullName>
    <label>Codice Operazione</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>