force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/fields/PowerQuote__c.field-meta.xml
<CustomField>
    <fullName>PowerQuote__c</fullName>
    <label>Quota Potenza</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>