force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/fields/ProcessCode__c.field-meta.xml
<CustomField>
    <fullName>ProcessCode__c</fullName>
    <label>Codice Causale</label>
    <length>15</length>
    <type>Text</type>
</CustomField>