force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/fields/QuotationType__c.field-meta.xml
<CustomField>
    <fullName>QuotationType__c</fullName>
    <label>Tipo Preventivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analitico</fullName>
                <default>true</default>
                <label>Analitico</label>
            </value>
            <value>
                <fullName>Rapido</fullName>
            </value>
            <value>
                <fullName>Predeterminabile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>