force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/fields/RequestPhase__c.field-meta.xml
<CustomField>
    <fullName>RequestPhase__c</fullName>
    <label>Fase Richiesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trifase</fullName>
                <default>true</default>
                <label>Trifase</label>
            </value>
            <value>
                <fullName>Monofase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>