force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;QuotationType&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QuotationType</fullName>
                <default>true</default>
                <label>QuotationType</label>
            </value>
            <value>
                <fullName>Domestico</fullName>
            </value>
            <value>
                <fullName>Non Domestico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>