force-app/main/default/objects/HDT_CalcoloPreventivi__mdt/fields/VoltageLevel__c.field-meta.xml
<CustomField>
    <fullName>VoltageLevel__c</fullName>
    <label>VoltageLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BT</fullName>
                <default>true</default>
                <label>BT</label>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>